menu mobile visibility fixed 2

--- a/css/menu_mobile_styles.css
+++ b/css/menu_mobile_styles.css
@@ -11,7 +11,7 @@
         bottom: 2rem;
         border-radius: 50%;
         background-color: #0a165c;
-        z-index: 1;
+        z-index: 2;
     }
 
     .wrapper a {
